--- a/Resources/Prototypes/Entities/Mobs/NPCs/scurret.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/scurret.yml
@@ -191,7 +191,7 @@
     Normal: "#ffffff" # Sluggy
     Innocent: "#f6f439" # Monky
     Angry: "#dc5864" # Hunty
-    Eldritch: "#dc5864"
+    Eldritch: "#1a2651"
     Perceptive: "#222222" # Watchy
     Fat: "#fefcab"
     Violent: "#ab3430"
