--- a/Resources/Prototypes/Entities/Objects/Fun/Instruments/instrument_keyed.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/Instruments/instrument_keyed.yml
@@ -3,25 +3,27 @@
   id: BaseKeyedInstrument
   abstract: true
   components:
-  - type: Tag
-    tags:
-    - KeyedInstrument
+    - type: Tag
+      tags:
+        - KeyedInstrument
 
 - type: entity
   parent: BaseKeyedInstrument
   id: SynthesizerInstrument
   name: synthesizer
   components:
-  - type: Instrument
-    program: 62
-  - type: SwappableInstrument
-    instrumentList:
-      "Electro": {62: 0} #i needed generic sounding synth presets, sue me
-      "Bubbles": {63: 0}
-  - type: Sprite
-    sprite: Objects/Fun/Instruments/h_synthesizer.rsi
-  - type: StaticPrice
-    price: 90
+    - type: Instrument
+      default:
+        program: 62
+      instrumentList:
+        Electro:
+          program: 62
+        Bubbles:
+          program: 63
+    - type: Sprite
+      sprite: Objects/Fun/Instruments/h_synthesizer.rsi
+    - type: StaticPrice
+      price: 90
 
 - type: entity
   parent: BaseKeyedInstrument
@@ -29,29 +31,33 @@
   name: super synthesizer
   description: Blasting the ghetto with Touhou MIDIs since 2020.
   components:
-  - type: Instrument
-    allowPercussion: true
-    allowProgramChange: true
-    respectMidiLimits: false
-  - type: Sprite
-    sprite: Objects/Fun/Instruments/h_synthesizer.rsi
-    state: supersynth
-  - type: Item
-    heldPrefix: super
+    - type: Instrument
+      default:
+        program: 0
+      allowPercussion: true
+      allowProgramChange: true
+      respectMidiLimits: false
+    - type: Sprite
+      sprite: Objects/Fun/Instruments/h_synthesizer.rsi
+      state: supersynth
+    - type: Item
+      heldPrefix: super
 
 - type: entity
   parent: BaseKeyedInstrument
   id: AccordionInstrument
   name: accordion
   components:
-  - type: Instrument
-    program: 21
-  - type: SwappableInstrument
-    instrumentList:
-      "Standard": {21: 0}
-      "Tango": {23: 0}
-  - type: Sprite
-    sprite: Objects/Fun/Instruments/accordion.rsi
+    - type: Instrument
+      default:
+        program: 21
+      instrumentList:
+        Standard:
+          program: 21
+        Tango:
+          program: 23
+    - type: Sprite
+      sprite: Objects/Fun/Instruments/accordion.rsi
 
 - type: entity
   parent: BaseKeyedInstrument
@@ -59,9 +65,10 @@
   name: kalimba
   description: The power of a piano right at your thumbs.
   components:
-  - type: Instrument
-    program: 108
-  - type: Sprite
-    sprite: Objects/Fun/Instruments/kalimba.rsi
-  - type: Item
-    size: Small
+    - type: Instrument
+      default:
+        program: 108
+    - type: Sprite
+      sprite: Objects/Fun/Instruments/kalimba.rsi
+    - type: Item
+      size: Small
