--- a/Resources/Prototypes/Entities/Objects/Fun/Instruments/instruments_brass.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/Instruments/instruments_brass.yml
@@ -3,9 +3,9 @@
   id: BaseBrassInstrument
   abstract: true
   components:
-  - type: Tag
-    tags:
-    - BrassInstrument
+    - type: Tag
+      tags:
+        - BrassInstrument
 
 - type: entity
   parent: BaseBrassInstrument
@@ -13,14 +13,16 @@
   name: trumpet
   description: The favorite instrument of jazz musicians and egotistical middle schoolers.
   components:
-  - type: Instrument
-    program: 56
-  - type: SwappableInstrument
-    instrumentList:
-      "Standard": {56: 0}
-      "Muted": {59: 0}
-  - type: Sprite
-    sprite: Objects/Fun/Instruments/trumpet.rsi
+    - type: Instrument
+      default:
+        program: 56
+      instrumentList:
+        Standard:
+          program: 56
+        Muted:
+          program: 59
+    - type: Sprite
+      sprite: Objects/Fun/Instruments/trumpet.rsi
 
 - type: entity
   parent: BaseBrassInstrument
@@ -28,10 +30,11 @@
   name: trombone
   description: Everyone's favorite sliding brass instrument.
   components:
-  - type: Instrument
-    program: 57
-  - type: Sprite
-    sprite: Objects/Fun/Instruments/trombone.rsi
+    - type: Instrument
+      default:
+        program: 57
+    - type: Sprite
+      sprite: Objects/Fun/Instruments/trombone.rsi
 
 - type: entity
   parent: BaseBrassInstrument
@@ -39,10 +42,11 @@
   name: french horn
   description: The fact that holding it involves using your hand to muffle it may suggest something about its sound.
   components:
-  - type: Instrument
-    program: 60
-  - type: Sprite
-    sprite: Objects/Fun/Instruments/frenchhorn.rsi
+    - type: Instrument
+      default:
+        program: 60
+    - type: Sprite
+      sprite: Objects/Fun/Instruments/frenchhorn.rsi
 
 - type: entity
   parent: BaseBrassInstrument
@@ -50,8 +54,9 @@
   name: euphonium
   description: A baby tuba? A Baritone? Whatever it is, it's a pretty cool mess of pipes.
   components:
-  - type: Instrument
-    program: 3
-    bank: 1
-  - type: Sprite
-    sprite: Objects/Fun/Instruments/euphonium.rsi
+    - type: Instrument
+      default:
+        bank: 10
+        program: 3
+    - type: Sprite
+      sprite: Objects/Fun/Instruments/euphonium.rsi
