--- a/Resources/Prototypes/Entities/Objects/Fun/Instruments/instruments_structures.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/Instruments/instruments_structures.yml
@@ -5,7 +5,8 @@
   description: Play Needles Piano Now.
   components:
   - type: Instrument
-    program: 1
+    default:
+      program: 1
   - type: Sprite
     state: piano
   - type: Climbable
@@ -17,7 +18,8 @@
   description: I said Piannie!
   components:
   - type: Instrument
-    program: 3
+    default:
+      program: 3
   - type: Sprite
     state: piano-upright
   - type: Climbable
@@ -29,7 +31,8 @@
   description: Good vibes all around.
   components:
   - type: Instrument
-    program: 11
+    default:
+      program: 11
   - type: Sprite
     state: vibraphone
 
@@ -39,7 +42,8 @@
   parent: BasePlaceableInstrumentRotatable
   components:
   - type: Instrument
-    program: 12
+    default:
+      program: 12
   - type: Sprite
     state: marimba
 
@@ -50,7 +54,8 @@
   description: This thing really blows!
   components:
   - type: Instrument
-    program: 19
+    default:
+      program: 19
   - type: Sprite
     state: church-organ
 
@@ -61,7 +66,8 @@
   description: The big daddy of the brass family. Standing next to its majesty makes you feel insecure.
   components:
   - type: Instrument
-    program: 58
+    default:
+      program: 58
   - type: Sprite
     state: tuba
 
@@ -72,7 +78,8 @@
   description: Plucking at the strings cuts your fingers, but at least the music is pretty.
   components:
   - type: Instrument
-    program: 46
+    default:
+      program: 46
   - type: Sprite
     state: harp
 
@@ -83,7 +90,8 @@
   description: It goes BOOM BOOM BOOM BOOM!
   components:
   - type: Instrument
-    program: 47
+    default:
+      program: 47
   - type: Sprite
     state: timpani
 
@@ -94,7 +102,8 @@
   description: A large drum. Looking at it fills you with the urge to slap it.
   components:
   - type: Instrument
-    program: 116
+    default:
+      program: 116
   - type: Sprite
     state: taiko
 
@@ -105,7 +114,8 @@
   description: Perfect for laying down a nice jazzy beat.
   components:
   - type: Instrument
-    program: 43
+    default:
+      program: 43
   - type: Sprite
     state: contrabass
   - type: Fixtures
@@ -132,7 +142,8 @@
   description: This is a minimoog, like a space piano, but more spacey!
   components:
   - type: Instrument
-    program: 81
+    default:
+      program: 81
   - type: Sprite
     state: minimoog
 
@@ -143,7 +154,8 @@
   description: Where'd the rest of the kit go?
   components:
   - type: Instrument
-    program: 117
+    default:
+      program: 117
   - type: Sprite
     state: toms
 
@@ -166,5 +178,7 @@
   - type: Machine
     board: DawInstrumentMachineCircuitboard
   - type: Instrument
+    default:
+      program: 0
     allowPercussion: true
     allowProgramChange: true
