--- a/Resources/Prototypes/Entities/Objects/Fun/pai.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/pai.yml
@@ -9,8 +9,9 @@
   - type: Instrument
     allowPercussion: false
     handheld: false
-    bank: 1
-    program: 2
+    default:
+      bank: 10
+      program: 2
   - type: UserInterface
     interfaces:
       enum.StoreUiKey.Key:
